test/corpus/subquery.txt
================================================================================
Can parse subquery
================================================================================

SELECT
	id
FROM
	table.subtable
WHERE
	id IN (SELECT 0)

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (field
            (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          (identifier)))
      (where
        (keyword_where)
        (binary_expression
          (binary_expression
          (field
            (identifier))
          (in
            (keyword_in))
          (subquery
            (select
              (keyword_select)
              (select_expression
                (term
                  (literal)))))))))))

